--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "build": "npm run build-popup && npm run build-background",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Qianhe Chen",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chenqianhe/chatgpt-consumption"
+  },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
     "tailwindcss": "^3.4.3",
